# hello-world

./: README.md
hello-world/: CMakeLists.txt  main.cpp
